# prgol

./: .wiz  1.txt  Dockerfile  app.py  build.sbt  cron.yaml  package-lock.json  package.json  packages.config  pom.xml  pyproject.toml  requirements.txt  s3.tf  tf_dng.tf  tons_iac.tf  tssss.json
.github/workflows/: wiz-cli-1x-dir-scan.yml
azure/: instructions.md
azure/bootstrap/: backend.tf  iac_config.wiz  main.tf
azure/main/: backend.tf  iac_config.wiz  main.tf  provider.tf
copilot/: .workspace
copilot/hello-world-service/: manifest.yml
copilot/svcmnt/: manifest.yml
sastic/: app.py  app_vuln_code_snippets.py  vulnerable_code.py  vulnerable_code_snippets.py
