[tool.poetry]
name = "vulnerable-example"
version = "0.1.0"
description = "A test project with intentionally vulnerable packages"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

# 1. Flask <2.0.3 — CVE-2021-41182
flask = "2.0.2"

# 2. requests <2.20.0 — CVE-2018-18074
requests = "2.19.1"

# 3. PyYAML <5.4 — CVE-2020-14343, CVE-2020-1747
pyyaml = "5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
